Correção: defini as rotas de servico do front para direcionar para a api e banco de dados